ENHANCE: fix vertical height on mobile

--- a/style.css
+++ b/style.css
@@ -365,6 +365,7 @@ ________/\\\\\\\\\__/\\\\\\\\\\\\\\\__/\\\\\\\\\\\\____
 body {
   background-color: #3f3f3f;
   font-family: "Lato", sans-serif;
+  height: 100vh;
 }
 .ctd-page {
   display: flex;
